<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bakcgroundContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_body"
    android:background="?attr/colorPrimary"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/app_logoo"
        android:transitionName="@string/logo_transition"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_next"
        android:enabled="false"
        android:alpha="0.6"
        android:textColor="@color/colorTextWhite"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

    <RelativeLayout
        android:id="@+id/contentWrapper"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/appLogo"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorTextDescription"
            android:textSize="@dimen/text_normal_size"
            android:text="@string/label_register_title"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerTitle"
            android:textColorHint="@color/colorTextGrey"
            android:textColor="@color/colorTextWhite"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            android:hint="@string/label_text_email_hint"
            android:layout_marginTop="30dp"
            android:inputType="textEmailAddress"
            android:background="@android:color/transparent"
            android:padding="10dp"/>
        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@color/colorTextGrey"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/registerEmail"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:textColor="@color/colorDescription"
            android:text="@string/label_agreeing"
            android:textSize="12sp"/>

    </RelativeLayout>

</RelativeLayout>